<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_box" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/IMVicon"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@color/TopBarColor"
            android:orientation="vertical" >

        </LinearLayout>

        <ImageView
            android:id="@+id/IMVicon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_launcher"
            android:visibility="invisible" />

   
<EditText
            android:id="@+id/ETdatatext"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
          	android:layout_above="@+id/Bback"
            android:layout_below="@+id/IMVicon"
            android:autoText="true"
            android:editable="true"
            android:focusable="false"
            android:hint="@string/pleasEnterSomeText"
            android:inputType="textMultiLine"
            android:linksClickable="true"
            android:longClickable="true"
            android:text=" "
            android:textStyle="italic" />
        <Button
            android:id="@+id/Bback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/button"
            android:text="@string/Back" />

        <Button
            android:id="@+id/Bedit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/button"
            android:text="@string/Edit" />

        <SlidingDrawer
            android:id="@+id/slidingDrawer1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/Bback"
            android:layout_alignTop="@+id/ETdatatext"
            android:layout_centerHorizontal="true"
            android:content="@+id/content"
            android:handle="@+id/handle" >

            <ImageView
                android:id="@+id/handle"
                android:layout_width="71dp"
                android:layout_height="72dp"
                android:src="@drawable/options" />

              <LinearLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparentGray" >




                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <CheckBox
                        android:id="@+id/checkBox1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false" 
                        android:focusable="false"
                        android:text="@string/countDownAlarm" />

                    <CheckBox
                        android:id="@+id/checkBox2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false" 
                        android:focusable="false"
                        android:text="CheckBox" />

                    <CheckBox
                        android:id="@+id/checkBox3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         android:clickable="false" 
                        android:focusable="false"
                        android:text="CheckBox" />

                    <CheckBox
                        android:id="@+id/checkBox4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false" 
                        android:focusable="false"
                        android:text="CheckBox" />
                </LinearLayout>

            </LinearLayout>

        </SlidingDrawer>

        <TextView
            android:id="@+id/TcatagoryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/linearLayout1"
            android:layout_toRightOf="@+id/IMVicon"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

</LinearLayout>